--- a/.github/workflows/web-deploy.yml
+++ b/.github/workflows/web-deploy.yml
@@ -19,7 +19,7 @@ jobs:
 
       - run: flutter clean
       - run: flutter pub get
-      - run: flutter build web --release --base-href=/flutter_gh_pages_test/
+      - run: flutter build web --base-href=/flutter_gh_pages_test/ --web-renderer canvaskit --release 
 
       # Web deploy now is contained in build/web directory
       - run: |
