--- a/.github/workflows/web-deploy.yml
+++ b/.github/workflows/web-deploy.yml
@@ -34,7 +34,7 @@ jobs:
           git init
           # the repository to push the deploy into
           #! Update the following with your username and repository
-          git remote add origin https://${{secrets.ACCESS_TOKEN}}@github.com/PeachyCad/flutter_gh_pages_test.git
+          git remote add origin https://x-access-token:${{secrets.ACCESS_TOKEN}}@github.com/PeachyCad/flutter_gh_pages_test.git
           git fetch origin gh-pages
           git switch gh-pages
           # copy the build that is there in ROOT/build/web into ROOT/build/web-deploy
